--- a/.assets/css/challenge1.css
+++ b/.assets/css/challenge1.css
@@ -72,7 +72,7 @@ header nav ul li a:hover {
 }
 
 .hero {
-  background-image:url("../images/hero-bg.jpg");
+  background-image:url("ubiquitous-portfolio\.assets\images\hero-bg.jpg");
   height: 200px;
   background-size: cover;
   background-position: center;
@@ -228,7 +228,7 @@ position:absolute;
   }
     
   .info h2 {
-    lex: 1 100%;
+    flex: 1 100%;
     text-align: left;
   }
     
