--- a/assets/css/challenge1.css
+++ b/assets/css/challenge1.css
@@ -36,6 +36,7 @@ header h1 {
   justify-content: flex-start;
   background: rgb(19, 19, 0);
   padding: 15px 5px 5px 5px;
+  border-radius: 15px;
 }
 
 header nav {
